Mon Apr 16 17:08:02 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (make_switch): do not clobber converter if pattern
	  has no convert method.  reported by sheepman in [ruby-dev:30709].

Mon Apr 16 16:49:32 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_seek): consistent behavior with
	  IO#seek.  patch by sheepman in [ruby-dev:30710].

Mon Apr 16 16:34:08 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (parser_yylex): should set command_start after block
	  starting "do"s and braces.  [ruby-core:10916]

Mon Apr 16 10:51:37 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (enum_each_with_index): each_with_index to forward
	  arguments to each.  [ruby-core:10921]

Mon Apr 16 10:43:10 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (time_arg): should allow to specify 24:00.
	  [ruby-core:10915]

Sun Apr 15 09:12:54 2007  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb: added some zone names.

	* lib/date/format.rb (_parse): now interprets doted numerical
	  dates as a big endian (except dd.mm.yyyy).

Thu Apr 12 17:13:22 2007  Koichi Sasada  <ko1@atdot.net>

	* thread.c (mutex_try_lock): check and set owner thread.

	* thread_pthread.ci: fix to show error code in error message.

Thu Apr 12 17:11:54 2007  Koichi Sasada  <ko1@atdot.net>

	* eval.c (rb_rescue2): restore cfp ([ruby-dev:30582]).

Thu Apr 12 16:06:48 2007  Koichi Sasada  <ko1@atdot.net>

	* eval.c (rb_protect): restore cfp ([ruby-dev:30671]).

Thu Apr 12 16:04:31 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): check node->nd_state == 1, not !0.

Wed Apr 11 16:35:16 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.[ch] (rb_w32_enter_critical, rb_w32_leave_critical): no
	  need to reject reentrance. removed.

	* rubysig.h (RUBY_CRITICAL): follow above changes.

	* rubysig.h (TRAP_BEG, TRAP_END): no need to save errno.

Tue Apr 10 17:02:17 2007  NAKAMURA Usaku  <usa@ruby-lang.org>
